--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -104,7 +104,7 @@
         android:id="@+id/textView15"
         android:layout_width="204dp"
         android:layout_height="29dp"
-        android:text="chooese your degree (max 3)"
+        android:text="choose your degree (max 3)"
         app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
