--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,8 +38,8 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="205dp"
+        android:layout_height="45dp"
         android:background="@drawable/costum_button"
         android:backgroundTint="#E9C5F6E7"
         android:text="login"
@@ -47,10 +47,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.549" />
+        app:layout_constraintVertical_bias="0.569" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
@@ -67,14 +66,14 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="250dp"
-        android:layout_height="39dp"
+        android:layout_width="205dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="52dp"
-        android:text="Don't have an account? Sign up here!"
+        android:text="New here? Click to sign up!"
         android:textColor="#FFFFFF"
+        android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
@@ -82,11 +81,13 @@
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:text="Forgot Password?"
         android:textColor="#FFFFFF"
+        android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintHorizontal_bias="0.366"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
