--- a/app/src/main/res/layout/meme.xml
+++ b/app/src/main/res/layout/meme.xml
@@ -22,6 +22,9 @@
         android:id="@+id/memeUserName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/memePhoto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
