--- a/app/src/main/res/layout/fragment_material.xml
+++ b/app/src/main/res/layout/fragment_material.xml
@@ -10,18 +10,22 @@
         android:id="@+id/upload_file"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/costum_button"
+        android:text="upload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/material_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="409dp"
+        android:layout_height="604dp"
         app:layout_constraintBottom_toTopOf="@+id/upload_file"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.911">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -30,8 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
+        android:hint="Enter description to your file"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/upload_file"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,11 +45,12 @@
         android:id="@+id/search_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Search here..."
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
