--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -17,13 +17,12 @@
         android:layout_marginEnd="12dp"
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="sans-serif"
-        android:onClick="logout"
         android:text="log out"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImage"
         android:layout_width="122dp"
         android:layout_height="107dp"
