--- a/app/src/main/res/drawable-anydpi/ic_add2.xml
+++ b/app/src/main/res/drawable-anydpi/ic_add2.xml
@@ -1,12 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25dp"
-    android:height="25dp"
+    android:width="30dp"
+    android:height="30dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#FFFFFF"
-
     >
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z"/>
+      android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
