--- a/app/src/main/res/layout/fragment_material.xml
+++ b/app/src/main/res/layout/fragment_material.xml
@@ -6,51 +6,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/upload_file"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/costum_button"
-        android:text="upload"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/material_recycler"
         android:layout_width="409dp"
-        android:layout_height="604dp"
-        app:layout_constraintBottom_toTopOf="@+id/upload_file"
+        android:layout_height="525dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.911">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@id/search_item" />
 
     <EditText
         android:id="@+id/description_material"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="267dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="Enter description to your file"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/upload_file"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/material_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/material_recycler"
+        app:layout_constraintVertical_bias="0.032" />
 
     <EditText
         android:id="@+id/search_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="302dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Search here..."
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@id/material_recycler"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/upload_file"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="64dp"
+        android:background="@drawable/download_button"
+        app:layout_constraintStart_toEndOf="@+id/description_material"
+        app:layout_constraintTop_toBottomOf="@id/material_recycler"
+        app:srcCompat="@drawable/ic_upload" />
 </androidx.constraintlayout.widget.ConstraintLayout>
