--- a/app/src/main/res/layout/fragment_material.xml
+++ b/app/src/main/res/layout/fragment_material.xml
@@ -19,14 +19,12 @@
         android:id="@+id/description_material"
         android:layout_width="267dp"
         android:layout_height="43dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="40dp"
         android:ems="10"
         android:hint="Enter description to your file"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/material_recycler"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintTop_toBottomOf="@+id/material_recycler" />
 
     <EditText
         android:id="@+id/search_item"
@@ -46,7 +44,7 @@
         android:id="@+id/upload_file"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="24dp"
         android:background="@drawable/download_button"
         app:layout_constraintStart_toEndOf="@+id/description_material"
         app:layout_constraintTop_toBottomOf="@id/material_recycler"
