--- a/app/src/main/res/layout/meme.xml
+++ b/app/src/main/res/layout/meme.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/memePhoto"
@@ -29,8 +30,7 @@
         app:layout_constraintTop_toTopOf="@+id/memePhoto"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-
-         />
+        app:lottie_url="https://assets1.lottiefiles.com/packages/lf20_5nLqa4.json" />
 
     <TextView
         android:id="@+id/memeUserName"
