--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chat_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/chatback4"
+        android:background="@drawable/backchat5"
         app:layout_constraintBottom_toTopOf="@+id/textToSend"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
