--- a/app/src/main/res/layout/fragment_material.xml
+++ b/app/src/main/res/layout/fragment_material.xml
@@ -8,29 +8,21 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/material_recycler"
-        android:layout_width="409dp"
-        android:layout_height="525dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_item" />
 
     <EditText
-        android:id="@+id/description_material"
-        android:layout_width="267dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="40dp"
-        android:ems="10"
-        android:hint="Enter description to your file"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/material_recycler" />
-
-    <EditText
         android:id="@+id/search_item"
-        android:layout_width="302dp"
-        android:layout_height="38dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Search here..."
         android:inputType="textPersonName"
@@ -40,13 +32,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/upload_file"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="24dp"
-        android:background="@drawable/download_button"
-        app:layout_constraintStart_toEndOf="@+id/description_material"
-        app:layout_constraintTop_toBottomOf="@id/material_recycler"
-        app:srcCompat="@drawable/ic_upload" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2">
+
+        <ImageButton
+            android:id="@+id/upload_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:background="@drawable/download_button"
+            app:srcCompat="@drawable/ic_upload" />
+
+        <EditText
+            android:id="@+id/description_material"
+            android:layout_width="267dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="40dp"
+            android:ems="10"
+            android:hint="Enter description to your file"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
 </androidx.constraintlayout.widget.ConstraintLayout>
