--- a/app/src/main/res/layout/meme2.xml
+++ b/app/src/main/res/layout/meme2.xml
@@ -37,6 +37,14 @@
                 android:layout_width="330dp"
                 android:layout_height="278dp"
                 tools:srcCompat="@tools:sample/avatars" />
+
         </LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:lottie_rawRes="@raw/loading"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
