--- a/app/src/main/res/layout/meme2.xml
+++ b/app/src/main/res/layout/meme2.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="340dp"
-        android:layout_height="363dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="60dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
         app:contentPadding="10dp"
@@ -17,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.095" >
+        app:layout_constraintVertical_bias="0.095">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,24 +30,25 @@
             <TextView
                 android:id="@+id/userMeme2"
                 android:layout_width="match_parent"
-                android:layout_height="68dp"
+                android:layout_height="48dp"
                 android:textColor="#000000"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/postMeme2"
-                android:layout_width="330dp"
-                android:layout_height="278dp"
+                android:layout_width="match_parent"
+                android:layout_height="550dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </LinearLayout>
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:lottie_rawRes="@raw/loading"
             app:lottie_autoPlay="true"
-            app:lottie_loop="true"/>
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loading" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
