--- a/app/src/main/res/layout/degree_home.xml
+++ b/app/src/main/res/layout/degree_home.xml
@@ -5,25 +5,37 @@
     android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="420dp"
-        android:layout_height="251dp"
-        android:orientation="vertical"
+    <androidx.cardview.widget.CardView
+        android:layout_width="285dp"
+        android:layout_height="136dp"
+        android:layout_marginBottom="15dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.012">
+        app:layout_constraintVertical_bias="0.09">
 
-        <ImageView
-            android:id="@+id/iconHome"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="176dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/degreeHome"
-            android:layout_width="match_parent"
-            android:layout_height="61dp" />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iconHome"
+                android:layout_width="match_parent"
+                android:layout_height="92dp"
+                android:layout_gravity="center"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/degreeHome"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:gravity="center"
+                android:textColor="#009688"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
