--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -9,30 +9,34 @@
     android:layoutDirection="rtl"
     tools:context=".mainPageFragments.ProfileFragment">
 
-    <Button
-        android:id="@+id/logoutButton"
-        android:layout_width="96dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="#00FFFFFF"
-        android:fontFamily="sans-serif"
-        android:text="log out"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profileImage"
-        android:layout_width="122dp"
-        android:layout_height="107dp"
-        android:src="@drawable/ic_launcher_profile"
-        app:layout_constraintBottom_toTopOf="@+id/titleName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.831" />
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="96dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="12dp"
+            android:backgroundTint="#00FFFFFF"
+            android:fontFamily="sans-serif"
+            android:text="log out"
+            android:textColor="#000000" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImage"
+            android:layout_width="122dp"
+            android:layout_height="107dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_launcher_profile" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/n1"
