--- a/app/src/main/res/layout/fragment_material.xml
+++ b/app/src/main/res/layout/fragment_material.xml
@@ -54,7 +54,8 @@
             android:id="@+id/description_material"
             android:layout_width="267dp"
             android:layout_height="43dp"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Enter description to your file"
             android:inputType="textPersonName" />
