--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -16,6 +16,7 @@
         android:drawableRight="@drawable/ic_privacy"
         android:gravity="center|left"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:shadowColor="#FFFFFF"
         android:text="Privacy and Policy"
         android:textColor="#FFFFFF"
@@ -32,9 +33,10 @@
         android:layout_width="277dp"
         android:layout_height="60dp"
         android:background="@drawable/costum_button"
-        android:drawableRight="@drawable/ic_launcher_email1"
+        android:drawableRight="@drawable/ic_email_settings"
         android:gravity="center|left"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="Report a problem"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
