--- a/app/src/main/res/drawable/ic_launcher_email1.xml
+++ b/app/src/main/res/drawable/ic_launcher_email1.xml
@@ -3,11 +3,11 @@
     android:height="50dp"
     android:viewportWidth="41.37931"
     android:viewportHeight="41.37931"
-    android:tint="#FFFFFF">
+    android:tint="#009688">
   <group android:translateX="8.689655"
       android:translateY="8.689655">
       <path
-          android:fillColor="#FFFFFF"
+          android:fillColor="#009688"
           android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
   </group>
 </vector>
