--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -25,8 +25,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="242dp"
-        android:layout_height="44dp"
+        android:layout_width="246dp"
+        android:layout_height="68dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-condensed-medium"
@@ -34,6 +34,7 @@
         android:textColor="#009688"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
